# desktop-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent-workspace/: agent_helpers.py
agent-workspace/domain-skills/: calendar.md  finder.md  mail.md  messages.md  notes.md  photos.md  safari.md  slack.md  system_settings.md  telegram.md  vscode.md
src/desktop_harness/: __init__.py  applescript.py  apps.py  ax.py  cli.py  errors.py  input.py  mcp_server.py  observers.py  ocr.py  permissions.py  recorder.py  refs.py  safety.py  screen.py  smart.py  snapshot.py  vision.py  waiters.py  windows.py
src/desktop_harness/adapters/: __init__.py  base.py  finder.py  mail.py  notes.py
tests/: conftest.py  test_adapters.py  test_applescript.py  test_apps.py  test_ax.py  test_errors.py  test_errors_v2.py  test_input.py  test_mcp_server.py  test_mcp_server_v05.py  test_refs.py  test_safety.py  test_screen.py  test_smart.py  test_waiters.py  test_windows.py
